# argparse.hpp

./: .clang-format  .clangd  .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  coverage.sh  test.bash
.ai/: system_prompt.md
.github/workflows/: cmake-multi-platform.yml  msys2.yml
.vim/: coc-settings.json
include/: argparse.hpp  argparser.hpp
include/argparse/: argparse.hpp
test/: CMakeLists.txt  argparse_fromstring_unittest.cc  argparse_parse_gnu_coreutils_unittest.cc  argparse_parse_unittest.cc  argparse_unittest.cc  argparser_fromstring_unittest.cc  argparser_parse_gnu_coreutils_unittest.cc  argparser_parse_unittest.cc  argparser_unittest.cc  concept_test.cc  custom_type_test.cc  fromstring_test.cc  gnucore_example_usage_test.cc  optional_bind_test.cc  parse_test.cc
tests/: CMakeLists.txt  argparse_unittest.cc  callback_test.cc  checker_test.cc  complete_test.cc  concept_test.cc  custom_type_test.cc  env_test.cc  expected_test.cc  fromstring_test.cc  parse_test.cc  parser_move_test.cc  remain_positionals_test.cc  unicode_test.cc
